# prs

./: .gitignore  README.md  justfile
cli/: Cargo.toml
cli/src/: main.rs
cli/src/action/: add.rs  alias.rs  clone.rs  copy.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  mod.rs  move.rs  remove.rs  show.rs
cli/src/action/housekeeping/: mod.rs  recrypt.rs  run.rs  sync_keys.rs
cli/src/action/internal/: clip_revert.rs  completions.rs  mod.rs
cli/src/action/otp/: add.rs  list.rs  mod.rs  remove.rs  view.rs
cli/src/action/recipients/: add.rs  export.rs  generate.rs  list.rs  mod.rs  remove.rs
cli/src/action/sync/: init.rs  mod.rs  remote.rs
cli/src/action/tomb/: close.rs  init.rs  mod.rs  open.rs  resize.rs  status.rs
cli/src/cmd/: handler.rs  mod.rs
cli/src/cmd/arg/: allow_dirty.rs  mod.rs  no_sync.rs  property.rs  query.rs  store.rs  timeout.rs
cli/src/cmd/matcher/: add.rs  alias.rs  clone.rs  copy.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  main.rs  mod.rs  move.rs  otp.rs  remove.rs  show.rs
cli/src/cmd/matcher/housekeeping/: mod.rs  recrypt.rs  run.rs  sync_keys.rs
cli/src/cmd/matcher/internal/: clip_revert.rs  completions.rs  mod.rs
cli/src/cmd/matcher/otp/: add.rs  list.rs  mod.rs  remove.rs  view.rs
cli/src/cmd/matcher/recipients/: add.rs  export.rs  generate.rs  list.rs  mod.rs  remove.rs
cli/src/cmd/matcher/sync/: init.rs  mod.rs  remote.rs
cli/src/cmd/matcher/tomb/: close.rs  init.rs  mod.rs  open.rs  resize.rs  status.rs
cli/src/cmd/subcmd/: add.rs  alias.rs  clone.rs  copy.rs  duplicate.rs  edit.rs  generate.rs  git.rs  grep.rs  init.rs  list.rs  mod.rs  move.rs  otp.rs  remove.rs  show.rs
cli/src/cmd/subcmd/housekeeping/: mod.rs  (+3 more)
cli/src/util/: cli.rs  clipboard.rs  edit.rs  error.rs  fs.rs  mod.rs  pass.rs  secret.rs  select.rs  select_basic.rs  select_fzf_bin.rs  select_skim.rs  select_skim_bin.rs  stdin.rs  style.rs  sync.rs  time.rs  tomb.rs
gtk3/src/: main.rs
lib/: Cargo.toml
lib/src/: git.rs  lib.rs  otp.rs  store.rs  sync.rs  systemd_bin.rs  tomb.rs  tomb_bin.rs  types.rs
lib/src/crypto/: mod.rs  recipients.rs  store.rs
lib/src/crypto/backend/: mod.rs
lib/src/crypto/backend/gnupg_bin/: context.rs  mod.rs  raw.rs  raw_cmd.rs
lib/src/crypto/backend/rage/: context.rs  mod.rs  raw.rs
lib/src/crypto/proto/: gpg.rs
lib/src/util/: env.rs  fs.rs  git.rs  tty.rs
scripts/dmenu/: prs-copy  prs-type
scripts/rofi/: prs-copy  prs-type
(+23 files in other folders)
