[package]
name = "prs-lib"
version = "0.3.2"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "LGPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/prs"
repository = "https://gitlab.com/timvisee/prs"
description = "Secure, fast & convenient password manager CLI with GPG & git sync"
keywords = ["pass", "passwordstore"]
categories = ["authentication", "command-line-utilities", "cryptography"]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/prs", branch = "master" }

[features]
# TODO: remove age
default = ["backend-gnupg-bin", "backend-age", "otp"]

### Regular features

# Option: tomb support for password store on Linux
tomb = ["fs_extra", "nix"]

# Option (default): OTP encoder
otp = ["ring", "data-encoding"]

### Pluggable cryptography backends

# Option: GnuPG cryptography backend using GPGME
backend-gpgme = ["gpgme"]

# Option (default): GnuPG cryptography backend using gpg binary
backend-gnupg-bin = ["regex", "version-compare"]

# TODO: add ssh flags for age

# Option: use age as default backend encryption
backend-age = ["age"]

### Private/internal/automatic features

# GnuPG (gpg) crypto support
_crypto-gpg = []

[dependencies]
anyhow = "1.0"
git-state = "0.1"
secstr = "0.4"
thiserror = "1.0"
walkdir = "2.0"
which = "4.0"
zeroize = "1.1"

# OTP support
ring = { version = "0.16.20", optional = true }
data-encoding = { version = "2.3.2", optional = true }

# Tomb support
fs_extra = { version = "1.2", optional = true }
nix = { version = "0.22", optional = true }

# Crypto backend: GPGME
gpgme = { version = "0.10", optional = true }

# Crypto backend: gnupg binary
version-compare = { version = "0.0.11", optional = true }
regex = { version = "1.5.4", optional = true }

dirs-next = "2.0"
once_cell = "1.8.0"
serde = "1.0.130"
serde_json = "1.0.67"
tracing = "0.1.26"
derive_builder = "0.10.2"
strum_macros = "0.21.1"
strum = "0.21.0"
colored = "2.0.0"

age = { version = "0.6.0", features = ["armor", "cli-common", "plugin", "ssh"], optional = true }

# Vendored shellexpand fork until crate is updated
# See ./src/vendor/shellexpand.rs
# shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
